Dark mode fix.

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 :root {
     font-family: Roboto, Inter, system-ui, Helvetica, Arial, sans-serif;
 
-    color-scheme: light dark;
+    color-scheme: light;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
